[gd_scene load_steps=21 format=3 uid="uid://c2qfawiylebo5"]

[ext_resource type="Texture2D" uid="uid://bhwmi0xufos0m" path="res://assets/Card Art/card_back.png" id="1_il4xp"]
[ext_resource type="Material" uid="uid://c2aiki26mcnqh" path="res://WhiteColorShader.tres" id="1_iqj45"]
[ext_resource type="Script" path="res://PlayableCard.gd" id="2_sp0tm"]

[sub_resource type="Animation" id="Animation_s1omt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_xwct2"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1.8, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, -5), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2jh8b"]
resource_name = "snap_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_ovg3d"]
resource_name = "teleport_in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 2.5), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pnme6"]
resource_name = "teleport_out"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 2.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y41vu"]
_data = {
"RESET": SubResource("Animation_s1omt"),
"idle": SubResource("Animation_xwct2"),
"snap_up": SubResource("Animation_2jh8b"),
"teleport_in": SubResource("Animation_ovg3d"),
"teleport_out": SubResource("Animation_pnme6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dcb6b"]
resource_local_to_scene = true
size = Vector2(86, 130)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wew4i"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_twr1o"]
animation = &"snap_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_um7dl"]
animation = &"teleport_in"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d847l"]
animation = &"teleport_out"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hjsq5"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_doclu"]
advance_mode = 2
advance_condition = &"is_focused"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a22eq"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j586r"]
advance_mode = 2
advance_condition = &"is_clicked"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8gull"]
advance_mode = 2
advance_condition = &"is_teleported"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_aapqk"]
states/Start/position = Vector2(195, 100)
states/idle/node = SubResource("AnimationNodeAnimation_wew4i")
states/idle/position = Vector2(352, 100)
states/snap_up/node = SubResource("AnimationNodeAnimation_twr1o")
states/snap_up/position = Vector2(538, 100)
states/teleport_in/node = SubResource("AnimationNodeAnimation_um7dl")
states/teleport_in/position = Vector2(672, 22.3305)
states/teleport_out/node = SubResource("AnimationNodeAnimation_d847l")
states/teleport_out/position = Vector2(690, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_hjsq5"), "idle", "snap_up", SubResource("AnimationNodeStateMachineTransition_doclu"), "snap_up", "idle", SubResource("AnimationNodeStateMachineTransition_a22eq"), "snap_up", "teleport_out", SubResource("AnimationNodeStateMachineTransition_j586r"), "teleport_out", "teleport_in", SubResource("AnimationNodeStateMachineTransition_8gull")]
graph_offset = Vector2(0, -68.6695)

[node name="PlayableCard" type="Sprite2D" groups=["clickableObject"]]
modulate = Color(0, 0, 0, 1)
material = ExtResource("1_iqj45")
position = Vector2(1.24529, 1.26606)
texture = ExtResource("1_il4xp")
offset = Vector2(0, -4.7486)
script = ExtResource("2_sp0tm")

[node name="Animation Player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y41vu")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_dcb6b")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_aapqk")
anim_player = NodePath("../Animation Player")
active = true
parameters/conditions/is_clicked = false
parameters/conditions/is_focused = false
parameters/conditions/is_idle = false
parameters/conditions/is_teleported = false

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
